--- a/todo1/src/pages/home/home.html
+++ b/todo1/src/pages/home/home.html
@@ -3,12 +3,36 @@
     <ion-title>
       ToDo List
     </ion-title>
+    <ion-button end>
+      <button>
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
+    </ion-button>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content >
+  
+  <ion-list>
+    <ion-item *ngIf="tasks.length">
+      No tasks
+      <p>Click <ion-icon name="add-circle"></ion-icon> to add task </p>
+    </ion-item>
+    <ion-item-sliding *ngFor="t of tasks">
+      <ion-item>
+        <ion-toggle></ion-toggle>
+        <ion-label>
+          <h2 [ngClass]="t.status">{{t.task}}</h2>
+          <p [ngClass]="t.priority">{{t.priority}}</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options>
+        <button primary> <ion-icon name="clipboard"></ion-icon> Edit </button>
+        <button danger> <ion-icon name="clipboard"></ion-icon> Delete </button>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
 </ion-content>
