--- a/todo1/src/pages/home/home.html
+++ b/todo1/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
       ToDo List
     </ion-title>
     <ion-buttons end>
       <button>
-        <ion-icon name="add-circle"></ion-icon>
+        <ion-icon color="primary" name="add-circle"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
