--- a/todo1/src/pages/modal/modal.html
+++ b/todo1/src/pages/modal/modal.html
@@ -4,15 +4,39 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-toolbar color="primary" >
 
-  <ion-navbar>
-    <ion-title>modal</ion-title>
-  </ion-navbar>
+  <ion-title>
+    Add Task
+  </ion-title>
+  <ion-buttons>
+    <button color="light">
+      <span showwhen="ios">Cancel</span>
+      <ion-icon name="close" showwhen="android"></ion-icon>
+    </button>
+  </ion-buttons>
 
-</ion-header>
+</ion-toolbar>
 
+  <ion-list>]
+    <ion-item>
+      <ion-label stacked>Task</ion-label>
+      <ion-input type="text" [(ngModel)]="task"></ion-input>
+    </ion-item>
 
-<ion-content padding>
+    <ion-item>
+      <ion-label stacked>Priority</ion-label>
+      <ion-select  [(ngModel)]="Priority">
+        <ion-option value="high">High</ion-option>
+        <ion-option value="normal">Normal</ion-option>
+        <ion-option value="low">Low</ion-option>
+      </ion-select>
+    </ion-item>
+
+  </ion-list>
+
+  <div style="padding: 4px">
+    <button ion-button round>Save</button>
+  </div>
 
 </ion-content>
