--- a/todo1/src/pages/home/home.html
+++ b/todo1/src/pages/home/home.html
@@ -4,7 +4,7 @@
       ToDo List
     </ion-title>
     <ion-buttons end>
-      <button>
+      <button [navPush]="modalPage">
         <ion-icon color="primary" name="add-circle"></ion-icon>
       </button>
     </ion-buttons>
