--- a/todo1/src/pages/modal/modal.html
+++ b/todo1/src/pages/modal/modal.html
@@ -9,14 +9,16 @@
   <ion-title>
     Add Task
   </ion-title>
-  <ion-buttons>
-    <button color="light">
-      <span showwhen="ios">Cancel</span>
+  <ion-buttons start>
+    <button ion-button color="light">
+      <span >Cancel</span>
       <ion-icon name="close" showwhen="android"></ion-icon>
     </button>
   </ion-buttons>
 
 </ion-toolbar>
+
+<ion-content>
 
   <ion-list>]
     <ion-item>
@@ -35,7 +37,7 @@
 
   </ion-list>
 
-  <div style="padding: 4px">
+  <div>
     <button ion-button round>Save</button>
   </div>
 
